Complete the composer configuration

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "john/air",
+    "name": "john-jun/air",
     "description": "The Of Air Framework.",
     "keywords": ["framework", "Air"],
     "license": "MIT",
