--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
     },
     "require-dev": {
         "eaglewu/swoole-ide-helper": "dev-master"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "dev-develop"
+        }
     }
 }
