--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "dev-develop"
+            "dev-master": "master"
         }
     }
 }
