--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "ext-ctype": "*",
         "ext-mongodb": "*",
         "ext-json":"*",
-        "hassankhan/config": "^2.0"
+        "hassankhan/config": "^2.0",
+        "symfony/http-foundation": "^4.1"
     },
     "autoload": {
         "psr-4": {
