--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "ext-ctype": "*",
         "ext-mongodb": "*",
         "ext-json":"*",
+        "ext-http":"*",
         "hassankhan/config": "^2.0",
         "symfony/http-foundation": "^4.1"
     },
