--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,10 @@
     "require": {
         "php": ">=7.0.0",
         "psr/container": "^1.0",
-        "ext-pdo": "*",
-        "ext-ctype": "*",
-        "ext-mongodb": "*",
-        "ext-json":"*",
-        "ext-http":"*",
-        "hassankhan/config": "^2.0",
-        "symfony/http-foundation": "^4.1"
+        "hassankhan/config": "@stable",
+        "symfony/http-foundation": "@stable",
+        "filp/whoops": "@stable",
+        "monolog/monolog": "@stable"
     },
     "autoload": {
         "psr-4": {
